[package]
name = "pontoon"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["memory-storage", "kv-store"]
memory-storage = []
kv-store = ["serde_json"]

[dependencies]
log = "0.4"
rand = "0.7"
async-channel = "1.1"
async-lock = "1.1"
async-trait = "0.1"
bytes = {version = "0.5", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", optional = true}
tokio = {version = "0.2", features = ["time", "rt-threaded", "rt-core", "macros", "stream"]}

[dev-dependencies]
env_logger = "0.7"

#[[bin]]
#name = "raft"
#path = "src/bin/raft.rs"
#required-features = ["runtime"]
