[package]
name = "pontoon"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
   "http-rpc",
  "grpc-rpc",
]
http-rpc = ["serde_json", "hyper"]
grpc-rpc = ["tonic", "prost", "tonic-build"]

[dependencies]
log = "0.4"
rand = "0.7"
async-channel = "1.1"
async-lock = "1.1"
async-trait = "0.1"
bytes = {version = "0.5", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", optional = true}
tokio = {version = "0.2", features = ["time", "rt-threaded", "rt-core", "macros", "stream"]}
tokio-rustls = "0.14"
hyper = {version = "0.13", optional = true}
futures = "0.3"
prost = {version = "0.6.1", optional = true}
tonic = {version="0.2",features = ["tls"], optional = true}

[dev-dependencies]
env_logger = "0.7"
toml = "0.5"
tokio = {version = "0.2", features = ["test-util"]}

[build-dependencies]
tonic-build = {version = "0.2", optional = true}