[package]
name = "pontoon-consensus"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
crossbeam-channel = "0.3"
serde = { version = "1.0", optional = true, features = ['derive'] }
serde_json = { version = "1.0", optional = true }
hyper = { version = "0.12.35", optional = true }
futures = "0.1.29"

[dev-dependencies]
env_logger = "0.7"

[[test]]
name = "integration"
path = "tests/tests.rs"

[features]
default = ["key-value-store", "http-transport"]
key-value-store = ["serde", "serde_json"]
http-transport = ["serde", "serde_json", "hyper"]
