[package]
name = "pontoon-consensus"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures = {version = "0.3", features = ["thread-pool"]}
async-trait = "0.1"
tokio = {version = "0.2", features = ["sync", "time"]}
rand = "0.7"

[dev-dependencies]
env_logger = "0.7"

#[[test]]
#name = "integration"
#path = "tests/tests.rs"
