[package]
name = "pontoon-core"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
crossbeam-channel = "0.3"
threadpool = "1.7"
serde = { version = "1.0", optional = true, features = ['derive'] }
serde_json = { version = "1.0", optional = true }

[[test]]
name = "integration"
path = "tests/tests.rs"

[features]
default = ["json"]
json = ["serde", "serde_json"]
