[package]
name = "pontoon-server"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tiny_http = "^0"
url = "^2"
http_req = "^0"
